styles.css
/* * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    
    
  } */
  *, ::after, ::before {
    box-sizing: border-box;
}

  body, html {
    height: 100%;
    margin: 0;
    font-family: 'DM Sans',sans-serif;
    /* letter-spacing: 5px; */
  }
  
  .hero-image {
    /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./imgs/derek-sutton-uouH1bGxeeU-unsplash\ \(1\).jpg"); */
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgb(36 68 83)), url(./imgs/derek-sutton-uouH1bGxeeU-unsplash\ \(1\).jpg);
    height: 50%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
  }
  
  .hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    
  }

  .hero-text h1{
    font-size:4rem;
  }
  
  .hero-text button {
    border: none;
    outline: 0;
    display: inline-block;
    padding: 10px 25px;
    color: black;
    background-color: #ddd;
    text-align: center;
    cursor: pointer;
    font-family: 'DM Sans',sans-serif;
    /* letter-spacing: 5px; */
    border-radius: 5px;
  }
  
  .hero-text button:hover {
    background-color: #555;
    color: white;
  }


.screen-shot-card{
    width: 300px;
    margin: 30px 20px;
}


/* Add some padding inside the card container */
.screen-shot-desc {
padding: 2px 16px;
}

.screen-shot{
    width: 100%;
}

.screen-shot img{
    width: 100%;
    
}

.benefit-headings{
    color:rgb(56 116 145);
    text-align: center;
}

.display-width-container{
    margin: auto;
    padding: 0 1rem;
    max-width: 1100px;
}

.display-width-container-sm{
    margin: auto;
    padding: 0 1rem;
    max-width: 700px;
}

.icon-container{
    width: 100px;
    margin: 15px auto;
}
.icon-container img{
    width: 100%;
}

.benefits-desc{
    text-align: center;
}

.logo-panel {
  padding: 2rem;
  background-color: #fbf9fc;
  border-radius: 1rem;
  text-align: center;
}

.org-panel {
    padding: 0.5rem;
    background-color: #fff;
    border-radius: 1rem;
    text-align: center;
  }

.panel-gradient {
  padding: 2rem;
  border-radius: 1rem;
  background-color: #3c8ec5;
  background: linear-gradient(42.86deg,#3c8ec5 0,#64b9ea 100%);
  color: #fff;
}

.panel-purple-subdued {
    padding: 2rem;
    background-color: #fbf9fc;
    border-radius: 1rem;
}

.screenshot-img {
    border-radius: 0.5rem;
    box-shadow: 0 3px 6px 0 rgb(0 0 0 / 20%), 0 0 20px 0 rgb(152 106 243 / 20%);
    max-width: 50vw;
    position: relative;
}

.img-fluid {
    max-width: 100%;
    height: auto;
}

.screenshot-img-left {
    direction: rtl;
}

img {
    vertical-align: middle;
    border-style: none;
}

/* *, ::after, ::before {
    box-sizing: border-box;
} */

.contact-footer-panel {
    background-color: #3c8ec5;
    background: linear-gradient(42.86deg,#3c8ec5 0,#64b9ea 100%);
    color: #fff;
}

.paneless-indented-content {
    padding: 2rem;
}

.contact-btn{
    text-decoration: none;
    color: black;
    background-color: transparent;
    text-align: center;
    cursor: pointer;
    font-family: 'DM Sans',sans-serif;
    /* letter-spacing: 5px; */
    border-radius: 5px;
}

.contact-btn:hover{
    color: white;
    background-color: transparent;
}

.org-logo-frame {
    max-width: 500px;
    margin: 15px auto;
    background-color: #dddddd7a;
    border-radius: 5px;
    padding: 20px;
}

.vid{
    width: 100%;
    height: 315px;
}

